:bug: fix icon spacing on tablet schedule

--- a/sass/partials/_timetable.scss
+++ b/sass/partials/_timetable.scss
@@ -76,7 +76,7 @@
 .timetable__open-symbol {
   display: none;
   width: 20px;
-  margin-top: 10px;
+  margin-top: 7px;
   @include media($tablet) {
     display: inline-block;
   }
